<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_titulo"
            android:textColor="#aaccaa"
            android:textSize="35sp" />

        <TableLayout 

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/titulo"
            android:stretchColumns="0,1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <ImageButton
                android:id="@+id/bt_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/input"
                
                android:contentDescription="@string/txt_bt_input"
                />
    
            <ImageButton
                android:id="@+id/bt_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/output"
                android:background="@null"
                android:contentDescription="@string/txt_bt_output" />
    
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_bt_input"/>
        
        <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_bt_output"/>
        
    </TableRow>
    
    <TableRow 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            >   

            <ImageButton
                android:id="@+id/bt_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bt_calendar_selector"
                android:background="@null"
                android:contentDescription="@string/txt_bt_calendar"
                 />
    
            <ImageButton
                android:id="@+id/bt_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/config"
                android:background="@null"
                android:contentDescription="@string/txt_bt_config" />
    
    </TableRow>
    <TableRow 
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_bt_calendar"/>
        
        <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_bt_config"/>
        
    </TableRow>
    </TableLayout>

</RelativeLayout>
